--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<repository>
 			<id>central</id>
 			<name>libs-release</name>
-			<url>http://artifactory.jx.35.229.103.201.nip.io/artifactory/libs-release</url>
+			<url>http://artifactory-artifactory/artifactory/libs-release</url>
 		</repository>
 	</distributionManagement>
 </project>
